--- a/projects/mona-ui/src/lib/layout/modules/scroll-view/components/scroll-view/scroll-view.component.html
+++ b/projects/mona-ui/src/lib/layout/modules/scroll-view/components/scroll-view/scroll-view.component.html
@@ -19,19 +19,21 @@
         <div class="mona-scroll-view-pager-arrow mona-scroll-view-pager-arrow-left"
              (click)="onPagerScroll(pagerListElement, 'left', 'single')"
              (mousedown)="onPagerScroll(pagerListElement, 'left', 'continuous')"
-             (mouseup)="onPagerScrollEnd()">
+             (mouseup)="onPagerScrollEnd()" *ngIf="pagerArrowVisible()">
             <fa-icon [icon]="leftArrow"></fa-icon>
         </div>
-        <ul class="mona-scroll-view-pager-list" [ngStyle]="{'transform': 'translateX('+pagerPosition()+')'}"
-            #pagerListElement>
-            <li *ngFor="let item of data; let ix = index;"
-                [ngClass]="{'mona-scroll-view-active-page': ix===activeIndex()}"
-                (click)="onPageClick(ix, pagerItemElement)" #pagerItemElement></li>
-        </ul>
+        <div class="mona-scroll-view-pager-list-wrapper">
+            <ul class="mona-scroll-view-pager-list" [ngStyle]="{'transform': 'translateX('+pagerPosition()+')'}"
+                #pagerListElement>
+                <li *ngFor="let item of viewData(); let ix = index;"
+                    [ngClass]="{'mona-scroll-view-active-page': ix===activeIndex()}"
+                    (click)="onPageClick(ix, pagerItemElement)" #pagerItemElement></li>
+            </ul>
+        </div>
         <div class="mona-scroll-view-pager-arrow mona-scroll-view-pager-arrow-right"
              (click)="onPagerScroll(pagerListElement, 'right', 'single')"
              (mousedown)="onPagerScroll(pagerListElement, 'right', 'continuous')"
-             (mouseup)="onPagerScrollEnd()">
+             (mouseup)="onPagerScrollEnd()" *ngIf="pagerArrowVisible()">
             <fa-icon [icon]="rightArrow"></fa-icon>
         </div>
     </div>
