--- a/projects/mona-ui/src/lib/layout/modules/scroll-view/components/scroll-view/scroll-view.component.scss
+++ b/projects/mona-ui/src/lib/layout/modules/scroll-view/components/scroll-view/scroll-view.component.scss
@@ -6,6 +6,7 @@ div.mona-scroll-view {
     position: relative;
     width: 100%;
     height: 100%;
+    outline: none;
 }
 
 div.mona-scroll-view-content {
