Use slide in/out for transition between pages
This implementation is a little bit iffy, need to check it later for a cleaner animation implementation.

--- a/projects/mona-ui/src/lib/layout/modules/scroll-view/components/scroll-view/scroll-view.component.scss
+++ b/projects/mona-ui/src/lib/layout/modules/scroll-view/components/scroll-view/scroll-view.component.scss
@@ -25,7 +25,7 @@ ul.mona-scroll-view-list {
         position: absolute;
         top: 0;
         left: 0;
-        transition: transform 0.65s ease-out;
+        //transition: transform 0.65s ease-out;
     }
 }
 
