--- a/projects/mona-ui/src/lib/layout/modules/scroll-view/components/scroll-view/scroll-view.component.html
+++ b/projects/mona-ui/src/lib/layout/modules/scroll-view/components/scroll-view/scroll-view.component.html
@@ -2,7 +2,11 @@
     <div class="mona-scroll-view-content">
         <ul class="mona-scroll-view-list">
             <ng-container *ngFor="let item of allData(); let ix = index;">
-                <li *ngIf="ix === activeIndex()" @fadeInOut>
+                <li *ngIf="ix === activeIndex()"
+                    [@.disabled]="lastDirection==='none'"
+                    [@slideInOut]="{value: '', params:
+                        {start: lastDirection==='right'?'+':'-',
+                         end: lastDirection==='right'?'-':'+'}}">
                     <ng-container [ngTemplateOutlet]="contentTemplate"
                                   [ngTemplateOutletContext]="{$implicit: item.data}"></ng-container>
                 </li>
@@ -10,16 +14,16 @@
         </ul>
     </div>
     <div class="mona-scroll-view-arrow mona-scroll-view-arrow-left" (click)="onArrowClick('left')"
-         *ngIf="infinite || activeIndex() !== 0">
+         [ngClass]="{'mona-hidden': !arrows || !(infinite || activeIndex() !== 0)}">
         <fa-icon [icon]="leftArrow"></fa-icon>
     </div>
     <div class="mona-scroll-view-arrow mona-scroll-view-arrow-right" (click)="onArrowClick('right')"
-         *ngIf="infinite || activeIndex() !== itemCount() - 1">
+         [ngClass]="{'mona-hidden': !arrows || (infinite || activeIndex() !== itemCount() - 1)}">
         <fa-icon [icon]="rightArrow"></fa-icon>
     </div>
     <div class="mona-scroll-view-pager"
          [ngClass]="{'mona-scroll-view-pager-dark': pagerOverlay==='dark', 'mona-scroll-view-pager-light': pagerOverlay==='light'}"
-         [ngStyle]="{'backdrop-filter': 'blur('+pagerBlur+'px)'}">
+         [ngStyle]="{'backdrop-filter': 'blur('+pagerBlur+'px)'}" *ngIf="pageable">
         <div class="mona-scroll-view-pager-arrow mona-scroll-view-pager-arrow-left"
              (click)="onPagerScroll(pagerListElement, 'left', 'single')"
              (mousedown)="onPagerScroll(pagerListElement, 'left', 'continuous')"
