--- a/projects/mona-ui/src/lib/layout/modules/avatar/components/avatar/avatar.component.scss
+++ b/projects/mona-ui/src/lib/layout/modules/avatar/components/avatar/avatar.component.scss
@@ -3,6 +3,7 @@ div.mona-avatar {
     align-items: center;
     justify-content: center;
     user-select: none;
+    position: relative;
     & img {
         width: 100%;
         height: 100%;
