--- a/projects/mona-ui/src/lib/layout/modules/expansion-panel/components/expansion-panel/expansion-panel.component.scss
+++ b/projects/mona-ui/src/lib/layout/modules/expansion-panel/components/expansion-panel/expansion-panel.component.scss
@@ -24,10 +24,6 @@ div.mona-expansion-panel-header-title {
 }
 
 div.mona-expansion-panel-content {
-    padding: 10px;
+    overflow: hidden;
     color: var(--mona-text);
-    &.hidden {
-        display: none;
-        border-bottom: none;
-    }
 }
