animation for dropdowns

--- a/projects/mona-ui/src/lib/dropdowns/modules/auto-complete/components/auto-complete/auto-complete.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/modules/auto-complete/components/auto-complete/auto-complete.component.html
@@ -6,7 +6,7 @@
 </div>
 
 <ng-template #popupTemplate>
-    <div *ngIf="!!popupRef">
+    <div>
         <mona-popup-list [textField]="textField" [valueField]="valueField" [groupField]="groupField" [value]="value ? [value] : []"
                          (valueChange)="onPopupListValueChange($event)">
             <ng-container *ngIf="itemTemplate">
