--- a/projects/mona-ui/src/lib/popup/components/popup-wrapper/popup-wrapper.component.scss
+++ b/projects/mona-ui/src/lib/popup/components/popup-wrapper/popup-wrapper.component.scss
@@ -2,3 +2,9 @@
     width: 100%;
     height: 100%;
 }
+
+div.mona-popup-wrapper {
+    width: 100%;
+    height: 100%;
+    overflow: hidden auto;
+}
