--- a/projects/mona-ui/src/lib/menus/modules/context-menu/components/context-menu-content/context-menu-content.component.scss
+++ b/projects/mona-ui/src/lib/menus/modules/context-menu/components/context-menu-content/context-menu-content.component.scss
@@ -6,6 +6,7 @@ ul {
     width: 100%;
     list-style: none;
     outline: none;
+    transform-origin: top left;
     & li {
         height: 26px;
         &.divider {
