--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -378,7 +378,7 @@
                                         <span style="color: snow; font-weight: bold;">{{step.label.substring(0,2).toUpperCase()}}</span>
                                     </ng-template>
                                     <ng-template monaStepperStepTemplate let-step let-index="index" let-active="active">
-                                        <fa-icon [icon]="snowflakeIcon" style="font-size: 24px; margin-top: 0px;" [ngStyle]="{'color': active?'#6daf76':'#95c5cb'}"></fa-icon>
+                                        <fa-icon [icon]="sunIcon" style="font-size: 24px; margin-top: 0px;" [ngStyle]="{'color': active?'#f00':'#313234'}"></fa-icon>
                                     </ng-template>
                                 </mona-stepper>
                             </div>
