fix: a lot of animation fixes and refactors

--- a/projects/mona-ui/src/lib/dropdowns/components/popup-list/popup-list.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/components/popup-list/popup-list.component.html
@@ -20,7 +20,7 @@
                 </ng-container>
             </ng-container>
             <li class="mona-list-item" *ngFor="let item of group.source" (click)="onListItemClick(item, $event)"
-                [ngClass]="{'mona-selected': item.selected, 'mona-highlighted': item.highlighted, 'mona-disabled': item.disabled}">
+                [ngClass]="{'mona-selected': item.selected(), 'mona-highlighted': item.highlighted(), 'mona-disabled': item.disabled}">
                 <mona-popup-list-item [item]="item" [itemTemplate]="itemTemplate"></mona-popup-list-item>
             </li>
         </ng-container>
