--- a/projects/mona-ui/src/lib/popup/components/popup-wrapper/popup-wrapper.component.html
+++ b/projects/mona-ui/src/lib/popup/components/popup-wrapper/popup-wrapper.component.html
@@ -1,7 +1,4 @@
 <div class="mona-popup-wrapper"
-     [ngClass]="wrapperClass()"
-     [@display]="visible()?'visible':'hidden'"
-     [@.disabled]="animationDisabled()"
-     (@display.done)="onAnimationDone($event)">
+     [ngClass]="wrapperClass()">
     <ng-container [ngTemplateOutlet]="templateRef"></ng-container>
 </div>
