--- a/projects/mona-ui/src/lib/inputs/modules/color-picker/components/color-picker/color-picker.component.html
+++ b/projects/mona-ui/src/lib/inputs/modules/color-picker/components/color-picker/color-picker.component.html
@@ -1,4 +1,4 @@
-<div class="mona-color-picker mona-input-selector" [attr.tabindex]="0" #colorPickerAnchor>
+<div class="mona-color-picker mona-input-selector" [attr.tabindex]="0" (click)="open()" #colorPickerAnchor>
     <div [style.background]="color" class="mona-input-selector-value">
         <fa-icon [icon]="noColorIcon" *ngIf="!color"></fa-icon>
     </div>
@@ -9,10 +9,7 @@
     </div>
 </div>
 
-<mona-popup [anchor]="colorPickerAnchor" popupClass="mona-color-picker-popup"
-            popupWrapperClass="mona-color-picker-popup-wrapper" width="auto">
-    <ng-template>
-        <mona-color-palette [palette]="palette" [columns]="8" [value]="color"
-                            (valueChange)="onColorPaletteValueChange($event)"></mona-color-palette>
-    </ng-template>
-</mona-popup>
+<ng-template #popupTemplate>
+    <mona-color-palette [palette]="palette" [columns]="8" [value]="color"
+                        (valueChange)="onColorPaletteValueChange($event)"></mona-color-palette>
+</ng-template>
