--- a/projects/mona-ui-tester/src/styles.scss
+++ b/projects/mona-ui-tester/src/styles.scss
@@ -1,19 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
-@import "dist/mona-ui/styles/lumine";
-//@import "dist/mona-ui/styles/noelle-light";
+@import url("https://use.typekit.net/zop2fdb.css");
+@import "dist/mona-ui/styles/kafka";
+//@import "dist/mona-ui/styles/base-light";
 
 html, body {
     width: 100%;
     height: 100%;
     background: #202123;
-    //background: #f6f7f8;
+    //background: #f8f8f8;
     scroll-behavior: smooth;
 }
 
 //body { font-size: 0.75rem; }
 
 body {
-    font-family: Helvetica Neue,Helvetica,Arial,sans-serif !important;
+    font-family: "proxima-nova", Helvetica Neue,Helvetica,Arial,sans-serif !important;
 }
 
 
