--- a/projects/mona-ui/src/lib/navigation/modules/breadcrumb/components/breadcrumb/breadcrumb.component.scss
+++ b/projects/mona-ui/src/lib/navigation/modules/breadcrumb/components/breadcrumb/breadcrumb.component.scss
@@ -17,6 +17,6 @@ li.mona-breadcrumb-item {
     cursor: pointer;
 }
 
-li.mona-breadcrumb-separator {
+span.mona-breadcrumb-separator-icon {
     margin: 0 12px;
 }
