--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -158,7 +158,14 @@
                         <div class="component-container" style="padding: 10px;">
                             <div>
                                 <mona-breadcrumb [items]="breadcrumbViewItems"
-                                                 (itemClick)="onBreadcrumbItemClick($event)"></mona-breadcrumb>
+                                                 (itemClick)="onBreadcrumbItemClick($event)">
+                                    <ng-template monaBreadcrumbItemTemplate let-item>
+                                        <span style="color: #00a86b; font-weight: bold;">{{item.label}}</span>
+                                    </ng-template>
+                                    <ng-template monaBreadcrumbSeparatorTemplate>
+                                        <span style="color: #fff; font-weight: bold; margin: 0 10px;">/</span>
+                                    </ng-template>
+                                </mona-breadcrumb>
                             </div>
                             <div>
                                 <button monaButton>Button 1</button>
