--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -160,7 +160,12 @@
                                 <mona-breadcrumb [items]="breadcrumbViewItems"
                                                  (itemClick)="onBreadcrumbItemClick($event)">
                                     <ng-template monaBreadcrumbItemTemplate let-item>
-                                        <span style="color: #00a86b; font-weight: bold;">{{item.label}}</span>
+                                        <ng-container *ngIf="item.text === 'Home'; else breadcrumbItemTemplate">
+                                            <fa-icon [icon]="homeIcon"></fa-icon>
+                                        </ng-container>
+                                        <ng-template #breadcrumbItemTemplate>
+                                            <span style="color: #00a86b; font-weight: bold;">{{item.text}}</span>
+                                        </ng-template>
                                     </ng-template>
                                     <ng-template monaBreadcrumbSeparatorTemplate>
                                         <span style="color: #fff; font-weight: bold; margin: 0 10px;">/</span>
