--- a/projects/mona-ui/src/lib/tooltips/modules/tooltip/components/tooltip/tooltip.component.html
+++ b/projects/mona-ui/src/lib/tooltips/modules/tooltip/components/tooltip/tooltip.component.html
@@ -3,6 +3,7 @@
         <div class="mona-tooltip-content">
             <ng-content></ng-content>
         </div>
-        <div class="mona-tooltip-arrow" [ngClass]="{'top':position==='top', 'bottom': position==='bottom', 'left': position==='left', 'right': position==='right'}"></div>
+        <div class="mona-tooltip-arrow"
+             [ngClass]="{'top':position==='top', 'bottom': position==='bottom', 'left': position==='left', 'right': position==='right'}"></div>
     </div>
 </ng-template>
