--- a/projects/mona-ui/styles/base.scss
+++ b/projects/mona-ui/styles/base.scss
@@ -30,6 +30,7 @@
 
     --mona-border-color: hsl(var(--mona-background-base), calc(var(--mona-background-base-lightness) - 6%));
     --mona-border-color-dark: hsl(var(--mona-background-base), calc(var(--mona-background-base-lightness) - 8%));
+    --mona-border-color-light: hsl(var(--mona-background-base), calc(var(--mona-background-base-lightness) - 2%));
     --mona-focus-border-color: hsl(var(--mona-background-base), calc(var(--mona-background-base-lightness) + 18%));
     --mona-primary-border-color: var(--mona-border-color);
     --mona-selected-border-color: var(--mona-primary-border-color);
